Made changes requested from design review and fixed text from being cut off in Firefox on the profile data component.

--- a/app/components/carousels/images-media-carousel/images-media-carousel.component.less
+++ b/app/components/carousels/images-media-carousel/images-media-carousel.component.less
@@ -1,7 +1,7 @@
 .profile {
   &-carousel {
     width: 100%;
-    height: 50%;
+    height: 100%;
     position: relative;
   }
 }
@@ -67,7 +67,7 @@
 .expand {
   cursor: pointer;
   top: 10px;
-  left: 20px;
+  left: 25px;
 }
 
 .virtual {
@@ -162,8 +162,8 @@
       position: absolute;
       width: 100%;
       height: 100%;
-      background-size: cover;
-      background-position: top;
+      background-size: contain;
+      background-position: center;
       background-repeat: no-repeat;
       &-navigation {
         display: flex;
@@ -211,30 +211,50 @@
 }
 
 @keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* Firefox < 16 */
 @-moz-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* Safari, Chrome and Opera > 12.1 */
 @-webkit-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* Internet Explorer */
 @-ms-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* Opera < 12.1 */
 @-o-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
